oh god, this isn't good, I'm just making mass-commits at teh end of the day...

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <section id="about" class="fadeOut content non-gallery">
   <figure class="about-image-container">
-    <img src="img/me-in-a-frame.jpg" alt="a photo of me inside of a picture frame" />
+    <img src="img/me-in-a-frame.png" alt="a photo of me inside of a picture frame" />
   </figure>
   <div class="about-words">
     <header><h2 id="responsive-headline">My Name is Tyler Shambora,</h2></header>
