--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <section id="contact" class="fadeOut content non-gallery">
   <form id="contact-form" action="process-form.php" method="post">
-    <p>Have a question? Maybe something like, "can you do some work for me?" Or maybe you just want to tell me how awesome you are? Fill out the form below and who knows, you just may get an response.</p>
+    <p>Have a question? Maybe you want to ask me something like, "can you do some work for me?" Or maybe you just want to tell me how awesome you are? Fill out the form below and who knows, you may actually get an response.</p>
     <div class="flex-container">
       <div class="name-entry">
         <label for="sender-name">Your Name</label>
