--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
   <div class="portfolio-items flex-container">
     <div class="portfolio-item">
       <a href="#papn">
-        <img src="img/icons/icon1.svg" />
+        <!-- <img src="img/icons/" /> -->
         <h3>Palo Alto Party Network</h3>
         <em>The Who's Who of Palo Alto Parties</em>
       </a>
