--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <li class="content-block">
       <div class="content-block-inner marquee">
         <figure>
-          <a href="resume.pdf" target="_blank"><img src="img/sites/resume-marquee.png" class="marquee-image no-border" alt="my resume" /></a>
+          <a href="resume.pdf" target="_blank"><img src="img/sites/resume-marquee.png" class="marquee-image" alt="my resume" /></a>
         </figure>
         <div class="marquee-description">
           <header><h2>Resume</h2></header>
