--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en" class="no-js">
   <head>
     <title>Home of Tyler Shambora</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="css/style.min.css" media="screen, handheld" />
     <link rel="stylesheet" type="text/css" href="css/enhanced.min.css" media="screen and (min-width: 43rem)" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300"  />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <!--script src="js/modernizr.test.js"></script-->
+    <script src="js/modernizr.min.js"></script>
   </head>
   <body>
 
@@ -38,7 +40,6 @@
             <em>Opera... Opera</em>
           </span>
         </div>
-        </p>
       </div>
     </div>
 
@@ -70,11 +71,9 @@
 
     <main id="guts" class="slideUp"></main>
 
-    <script src="js/modernizr.min.js"></script>
     <script src="//fast.fonts.net/jsapi/2c332a73-b30b-4ab4-8804-299964fd4435.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/main.js"></script>
-
+    <script src="js/main.min.js"></script>
   </body>
 </html>
