my head feels like it's gonna 'asplode

--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,9 @@
     <main id="guts" class="slideUp">
 
       <footer id="guts-footer">
-        <span class="footer-copy"><a href="http://www.wtfpl.net/about/" target="_blank">&copy; Two Thousand Whatever.</a></span>
+        <span class="footer-copy">
+          <a href="http://www.wtfpl.net/about/" target="_blank">&copy; Two Thousand and Whenever</a>
+        </span>
         <span class="footer-links">
           <a href="http://twitter.com/tshamz" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
           <a href="http://instagram.com/tshamz" target="_blank"><i class="fa fa-instagram"></i>Instagram</a>
