--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<!-- html lang="en" class="no-js" manifest="cache.manifest" -->
 <html lang="en" class="no-js">
+<!-- html lang="en" class="no-js" manifest="cache.manifest" -->
   <head>
-
     <title>Home of Tyler Shambora</title>
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="screen, handheld" />
     <!--link rel="stylesheet" type="text/css" href="css/font-awesome.css" media="screen, handheld" /-->
 
+    <!-- Navigate to http://tylershambora.com/css/style.css to see the dev. version -->
     <link rel="stylesheet" type="text/css" href="css/style.min.css" media="screen, handheld" />
     <!--link rel="stylesheet" type="text/css" href="css/style.css" media="screen, handheld" /-->
 
+    <!-- Navigate to http://tylershambora.com/css/enhanced.css to see the dev. version -->
     <link rel="stylesheet" type="text/css" href="css/enhanced.min.css" media="screen and (min-width: 50rem)" />
     <!--link rel="stylesheet" type="text/css" href="css/enhanced.css" media="screen and (min-width: 50rem)" /-->
 
@@ -19,16 +20,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
+    <!-- Google Analytics -->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-52722702-1', 'auto');
       ga('send', 'pageview');
-    </script>
 
+    </script>
+    <!-- End Google Analytics -->
   </head>
   <body>
     <div id="no-support">
@@ -118,6 +121,11 @@
     <script src="//fast.fonts.net/jsapi/2c332a73-b30b-4ab4-8804-299964fd4435.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+
+    <script src="js/modernizr.min.js"></script>
+    <!--script src="js/modernizr.test.js"></script-->
+
+    <!-- Navigate to http://tylershambora.com/js/main.js see the dev. version -->
     <script src="js/main.min.js"></script>
     <!--script src="js/main.js"></script-->
   </body>
