End of the day commit

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
       <div id="wtf-warning">
         <h2>Warning</h2>
         <p><strong>The page you are about to visit contains a lot of swearing. To be specific, it contains a lot of F-Bombs. Are you sure you're ok with seeing a bunch of F-Bombs? Your feelings won't get hurt?</strong></p>
-        <button id="no-way">Get Me Outta Here!</button>
+        <button id="no-way">I Want Out!</button>
         <button id="yes-way">Lemme In!</button>
       </div>
     </div>
