Nightly commit, css updates, few js updates, readme.md updates

--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,10 @@
 
     <div id="lightbox">
       <div class="lightbox-image-container">
-        <span class="lightbox-close">X</span>
-        <img id="lightbox-image" src="" />
+        <div class="lightbox-image-inner-container">
+          <span class="lightbox-close">X</span>
+          <img id="lightbox-image" src="" />
+        </div>
       </div>
     </div>
 
