--- a/app/injected-html.html
+++ b/app/injected-html.html
@@ -77,7 +77,7 @@
       <a href="#cpsolutions">
         <img src="img/icons/cp-solutions-icon.png" />
         <h3>CP Solutions Consulting</h3>
-        <em>They Do Consulting for the Illuminati and make a Bazillions</em>
+        <em>Consulting for the Illuminati; Bajillionaires</em>
       </a>
     </div>
   </div>
@@ -85,7 +85,7 @@
 
 <!-- ENTRANCE -->
 <section id="entrance" class="fadeOut content">
-  <div class="what-i-am"><h2><i>I'm</i> a 20-something web developer, who spends a <i>good</i> amount of time <i>at</i> a computer. I enjoy <i>writing</i> all kinds of code, but I like front-end <i>code</i> the best.</h2></div>
+  <div class="what-i-am"><h2><i>I'm</i> a 20-something web developer, who spends a <i>good</i> amount of time <i>at</i> a computer. I enjoy <i>writing</i> PHP, Ruby and Python, but front-end <i>code</i> is where I excel.</h2></div>
 </section>
 
 <!-- CONTACT -->
