--- a/app/index.html
+++ b/app/index.html
@@ -61,10 +61,10 @@
 
     <div id="lightbox">
       <div class="lightbox-image-container">
-        <div class="lightbox-image-inner-container">
+        <span class="lightbox-image-inner-container">
           <span class="lightbox-close">X</span>
           <img id="lightbox-image" src="" />
-        </div>
+        </span>
       </div>
     </div>
 
