--- a/app/index.html
+++ b/app/index.html
@@ -35,23 +35,23 @@
           <p>You are using an <strong>outdated</strong> browser!</p>
           <p>The following features are unsupported or turned off:</p>
           <ul id="unsupported-features"></ul>
-          <p>and have robbed you of the awesomeness that is looking at this site in all it's glory. <i>(It's also possible you're using <strong>Safari (or Mobile Safari)</strong> and have private browsing enabled. Turning it off and reloading should fix everything.)</i></p>
+          <p>and have robbed you of the awesomeness that is viewing this site in all it's glory.<br><i>(It's also possible you're using <strong>Safari (or Mobile Safari)</strong> and have private browsing enabled. Turning off private browsing and reloading should fix everything.)</i></p>
           <p>A list of today's most fabulous and exciting browsers can be found below.</p>
         </div>
         <div class="no-support-downloads">
-          <span class="download-chrome">
+          <span class="download chrome">
             <a href="https://www.google.com/chrome/browser/" target="_blank"></a>
             <em>Google Chrome</em>
           </span>
-          <span class="download-firefox">
+          <span class="download firefox">
             <a href="https://www.mozilla.org/en-US/firefox/new/?utm_source=firefox-com&utm_medium=referral" target="_blank"></a>
             <em>Mozilla Firefox</em>
           </span>
-          <span class="download-safari">
+          <span class="download safari">
             <a href="http://www.apple.com/safari/" target="_blank"></a>
             <em>Apple Safari</em>
           </span>
-          <span class="download-opera">
+          <span class="download opera">
             <a href="http://www.opera.com/" target="_blank"></a>
             <em>Opera... Opera</em>
           </span>
@@ -68,18 +68,18 @@
       </div>
     </div>
 
-    <div id="wtf-overlay">
-      <div id="wtf-warning">
+    <div id="wtf-warning">
+      <div class="wtf-warning-inner">
         <h2>Warning</h2>
-        <p><strong>The page you are about to visit contains a lot of swearing. To be specific, it contains a lot of F-Bombs. Are you sure you're ok with seeing a bunch of F-Bombs? Your feelings won't get hurt?</strong></p>
-        <button id="no-way">I Want Out!</button>
-        <button id="yes-way">Lemme In!</button>
+        <p class="wtf-warning-body"><strong>The page you are about to visit contains a lot of swearing. To be specific, it contains a lot of F-Bombs. Are you sure you're ok with seeing a bunch of F-Bombs? Your feelings won't get hurt?</strong></p>
+        <button class="wtf-warning-no-way">I Want Out!</button>
+        <button class="wtf-warning-yes-way">Lemme In!</button>
       </div>
     </div>
 
     <header id="main-header">
       <nav>
-        <div class="entrance nav-item handheld logo">
+        <div class="entrance nav-item handheld nav-logo">
           <a href="#entrance">
             <span class="logo-image"><img src="img/logo-icon-small.png" alt="Small Logo Icon" /></span>
             <span class="logo-text"><h1>TylerShambora</h1></span>
@@ -87,7 +87,7 @@
         </div>
         <div class="about nav-item"><a href="#about">About</a></div>
         <div class="portfolio nav-item"><a href="#portfolio">Portfolio</a></div>
-        <div class="entrance nav-item screen logo">
+        <div class="entrance nav-item screen nav-logo">
           <a href="#entrance">
             <span class="logo-image color-fader"><img src="img/logo-icon-small.png" alt="Small Logo Icon" /></span>
             <span class="logo-text">
