Updated transtion to use transform instead of transitioning height

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,8 @@
   <head>
     <title>Home of Tyler Shambora</title>
 
-    <!-- Navigate to http://tylershambora.com/css/style.css to see the dev. version -->
+    <!-- Navigate to http://tylershambora.com/css/ to see the dev. versions -->
     <link rel="stylesheet" type="text/css" href="css/style.min.css" media="screen, handheld" />
-
-    <!-- Navigate to http://tylershambora.com/css/enhanced.css to see the dev. version -->
     <link rel="stylesheet" type="text/css" href="css/enhanced.min.css" media="screen and (min-width: 50rem)" />
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
@@ -119,11 +117,9 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
 
-    <script src="js/modernizr.min.js"></script>
+    <!-- Navigate to http://tylershambora.com/js/ see the dev. versions -->
     <!--script src="js/modernizr.test.js"></script-->
-
-    <!-- Navigate to http://tylershambora.com/js/main.js see the dev. version -->
-    <!-- script src="js/main.min.js"></script -->
-    <script src="js/main.js"></script>
+    <script src="js/modernizr.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
