--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <!-- script src="scripts/modernizr.test.js"></script -->
+
     <script src="//fast.fonts.net/jsapi/2c332a73-b30b-4ab4-8804-299964fd4435.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.js"><\/script>')</script>
@@ -113,6 +113,8 @@
     <script src="scripts/vendor/jquery.js"></script>
     <script src="scripts/vendor/modernizr.js"></script>
     <!-- endbuild -->
+
+    <!-- script src="scripts/vendor/modernizr.test.js"></script -->
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/modules/contact-module.js"></script>
