--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-<!-- html lang="en" class="no-js" manifest="cache.manifest" -->
+<!-- <html lang="en" class="no-js"> -->
+<html lang="en" class="no-js" manifest="cache.manifest">
   <head>
     <title>Home of Tyler Shambora</title>
 
